Modifiquei a referencia do Cockburn 2001: "TheBusinessOfInnovation".

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -39,10 +39,13 @@
 }
 
 @article{TheBusinessOfInnovation,
-  title = {Agile development: the business of innovation},
-  author = {Alistair Cockburn and Jim Highsmith},
-  journal = {IEEE Computer},
+  title = {Agile Software Development: the business of innovation},
+  author = {Jim Highsmith and Alistair Cockburn},
+  journal = {Computer},
   year = 2001,
+  volume = 34,
+  number = 9,
+  ee = {http://doi.ieeecomputersociety.org/10.1109/2.947100},
   month = September,
 }
 
