Inclui a referencia do Sommerville 2007 da 8 edição.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -82,6 +82,14 @@
   publisher={MCGRAW HILL - ARTMED}
 }
 
+@book{Sommerville,
+  title={Engenharia de Software},
+  author={Ian Sommerville},
+  year={2007},
+edition = {8},
+  publisher={Pearson Addison Wesley}
+}
+
 @book{AMaquinaQueMudouOMundo,
   title = {A m{\'a}quina que mudou o mundo},
   author = {James P. WOMACK and Daniel T. JONES and Daniel Roos},
